[tool.poetry]
name = "my-kyopro-tessoku"
version = "0.1.0"
description = ""
authors = ["danimal141 <hideaki.ishii1204@gmail.com>"]
readme = "README.md"
packages = [{include = "my_kyopro_tessoku"}]

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
